# TaskbarClock

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  build.bat  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
clock/: alarm.py  timer_manager.py
core/: config.py  crash_report.py  logger.py  singleton.py
docs/: architecture.md  config-reference.md  user-guide.md
installer/: setup.iss
services/: notifier.py  sounds.py
tests/: conftest.py
tests/e2e/: test_app_lifecycle.py
tests/integration/: test_alarm_dialog.py  test_analog_clock.py  test_timer_dialog.py  test_tray_icon.py
tests/unit/: test_alarm.py  test_clock_renderer.py  test_config.py  test_sounds.py  test_timer.py
ui/: alarm_dialog.py  analog_clock.py  clock_renderer.py  clock_styles.py  taskbar_clock_widget.py  theme.py  timer_dialog.py  tray_icon.py
